--- a/deployment/ansible-vitam/roles/metadata/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/metadata/tasks/main.yml
@@ -74,3 +74,21 @@
     state: "started"
   when: ( inventory_hostname == groups["hosts-metadata"] | last ) and
         ( primary_site | lower == "true" )
+
+- name: Ensure vitam-metadata-computed-inherited-rules timer is stopped
+  systemd:
+    name: "vitam-metadata-computed-inherited-rules.timer"
+    daemon_reload: "yes"
+    enabled: "no"
+    state: "stopped"
+  when: ( primary_site | lower == "false" ) or
+        ( inventory_hostname != groups["hosts-metadata"] | last )
+
+- name: Ensure vitam-metadata-computed-inherited-rules timer is started
+  systemd:
+    name: "vitam-metadata-computed-inherited-rules.timer"
+    daemon_reload: "yes"
+    enabled: "yes"
+    state: "started"
+  when: ( inventory_hostname == groups["hosts-metadata"] | last ) and
+        ( primary_site | lower == "true" )
