--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -100,6 +100,8 @@ vitam_timers:
           frequency: "*-*-* *:0/30:00"
         - name: vitam-metadata-reconstruction
           frequency: "*-*-* *:0/5:00"
+        - name: vitam-metadata-computed-inherited-rules
+          frequency: "*-*-* 02:30:00"
 
 
 ### consul ###
