--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -363,6 +363,17 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>com.github.eirslett</groupId>
+                    <artifactId>frontend-maven-plugin</artifactId>
+                    <!-- NB! Set <version> to the latest released version of frontend-maven-plugin, like in README.md -->
+                    <version>${frontend-maven-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>${build-helper-maven-plugin.version}</version>
+                </plugin>
+                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>license-maven-plugin</artifactId>
                     <version>${license-maven-plugin.version}</version>
@@ -1459,18 +1470,7 @@
                 <artifactId>rxjava</artifactId>
                 <version>${io.reactivex.rxjava2.version}</version>
             </dependency>
-            <!-- #################### specific IHM ################### -->
-            <dependency>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <!-- NB! Set <version> to the latest released version of frontend-maven-plugin, like in README.md -->
-                <version>${frontend-maven-plugin.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>${build-helper-maven-plugin.version}</version>
-            </dependency>
+            
             <!-- ####################### Tests ####################### -->
 
             <dependency>
