--- a/sources/functional-administration/functional-administration-common/pom.xml
+++ b/sources/functional-administration/functional-administration-common/pom.xml
@@ -91,5 +91,10 @@
 	        <artifactId>log4j-core</artifactId>
 	        <scope>test</scope>
 	    </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.json-unit</groupId>
+            <artifactId>json-unit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 	</project>
