--- a/sources/ingest/ingest-internal/ingest-internal-rest/pom.xml
+++ b/sources/ingest/ingest-internal/ingest-internal-rest/pom.xml
@@ -128,7 +128,7 @@
             <artifactId>rpm-maven-plugin</artifactId>
             <configuration>
                 <disabled>false</disabled>
-                <licence>CeCILL 2.1</licence>
+                <license>CeCILL 2.1</license>
                 <distribution>Vitam Project</distribution>
                 <group>Application/Archiving</group>
                 <packager>Vitam Package Team</packager>
@@ -139,7 +139,7 @@
                     <require>java-1.8.0</require>
                     <require>vitam-user-${unix.user}</require>
                 </requires>
-                <defaultDirMode>750</defaultDirMode>
+                <defaultDirmode>750</defaultDirmode>
                 <defaultFileMode>640</defaultFileMode>
                 <defaultUsername>${unix.user}</defaultUsername>
                 <defaultGroupname>${unix.group}</defaultGroupname>
