--- a/sources/common/common-junit/pom.xml
+++ b/sources/common/common-junit/pom.xml
@@ -76,4 +76,19 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<resources>
+			<resource>
+				<directory>src/test/resources</directory>
+			</resource>
+			<!-- Include ontologie file from ansible deployment configuration to avoid duplication -->
+			<resource>
+				<directory>../../../deployment/ansible-vitam/roles/init_contexts_and_security_profiles/files</directory>
+				<includes>
+					<include>VitamOntology.json</include>
+				</includes>
+			</resource>
+		</resources>
+	</build>
+
 </project>
