--- a/sources/worker/worker-core/pom.xml
+++ b/sources/worker/worker-core/pom.xml
@@ -37,6 +37,12 @@
         </dependency>
         <dependency>
             <groupId>fr.gouv.vitam</groupId>
+            <artifactId>common-junit</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>fr.gouv.vitam</groupId>
             <artifactId>common-database-private</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -140,17 +146,5 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-            </testResource>
-            <!-- Include ontologie file from ansible deployment configuration to avoid duplication -->
-            <testResource>
-                <directory>../../../deployment/ansible-vitam/roles/init_contexts_and_security_profiles/files</directory>
-                <includes>
-                    <include>VitamOntology.json</include>
-                </includes>
-            </testResource>
-        </testResources>
     </build>
 </project>
