--- a/vitam-conf-dev/conf/metadata/metadata.conf
+++ b/vitam-conf-dev/conf/metadata/metadata.conf
@@ -9,6 +9,9 @@ archiveUnitProfileCacheTimeoutInSeconds: 300
 schemaValidatorCacheMaxEntries: 100
 schemaValidatorCacheTimeoutInSeconds: 300
 
+# DIP purge service (in minutes)
+dipTimeToLiveInMinutes: 10080 # 7 days
+
 # Configuration MongoDB
 mongoDbNodes:
 - dbHost: localhost
