item 5784 - Filtre des au par règles via AccessContract

--- a/sources/functional-administration/functional-administration-common/src/main/resources/accesscontract-es-mapping.json
+++ b/sources/functional-administration/functional-administration-common/src/main/resources/accesscontract-es-mapping.json
@@ -17,6 +17,10 @@
       "type": "keyword",
       "null_value": "NULL"
     },
+    "RuleCategoryToFilter": {
+      "type": "keyword",
+      "null_value": "NULL"
+    },
     "CreationDate": {
       "type": "date",
       "format": "strict_date_optional_time"
